# RRR_Rapid_Research_Reasoner

./: .gitignore  README.md
frontend/: package-lock.json  package.json
infra/compose/: docker-compose.yml
services/: pyproject.toml
services/api_gateway/: main.py
services/ingestion_service/: main.py
services/reasoning_service/: main.py
services/retrieval_service/: main.py
shared/: schemas.py
