[project]
name = "services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=26.3.1",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.10",
    "uvicorn>=0.44.0",
]
# for formatting code 
[tool.black]
line-length=88

#for tests 
[tool.ruff]
line-length=88
